--- a/lesson_1/3.html
+++ b/lesson_1/3.html
@@ -30,7 +30,48 @@ console.log(3 - 4 * 2);
 <script>
   "use strict";
 
-  // Здесь пишем решение, данный комментарий необходимо стереть.
+   /*
+  1. 10 + 10, получаем 20
+  2. 20 + "10", число и строка. Число 20 приводится в строку "20",
+    после чего произойдет склеивание строк: "20" + "10" в результате получим "2010"
+  3. С помощью console.log выводим строку "2010" в консоль
+   */
+   console.log(10 + 10 + "10"); // "2010"
+
+/*
+1. 10 + "10", число и строка. Число 10 приводится в строку "10",
+  после чего произойдет склеивание строк: "10" + "10" в результате получим "1010"
+2. "1010" + 10, строка и число. Число 10 приводится в строку "10",
+  после чего произойдет склеивание строк: "1010" + "10" в результате получим "101010"
+3. С помощью console.log выводим строку "101010" в консоль
+ */
+console.log(10 + "10" + 10); // "101010"
+
+/*
+1. 10 + 10, получаем 20
+2. Оператор + перед строкой приводит ее в число, +"10" приводится к числу 10
+3. 20 + 10, получаем 30
+4. С помощью console.log выводим число 30 в консоль
+ */
+console.log(10 + 10 + +"10"); // 30
+
+/*
+1. Оператор - перед строкой приводит ее к чилу, тк "" будет пустой строкой,
+то получае число 0
+2. 10 / -0, получаем -Infinity
+3. С помощью console.log выводим число -Infinity в консоль
+ */
+console.log(10 / -""); // -Infinity
+
+/*
+1. Оператор + приводит строку в число, но так в строке запятая, а не точка мы получаем
+не число, а NaN
+2. 10 / NaN, получаем NaN
+3. С помощью console.log выводим число NaN в консоль
+ */
+console.log(10 / +"2,5"); // NaN
+
+
 </script>
 </body>
 </html>
